<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaymentActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/Header"
        android:textAlignment="center"
        android:textSize="30sp"
        android:paddingTop="20dp"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:paddingTop="50dp"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/emai"
        android:inputType="textEmailAddress"
        android:lines="1"
        android:textColorHint="@android:color/holo_red_dark"
        android:id="@+id/edit_email_address"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/card_number"
        android:textColorHint="@android:color/holo_red_dark"
        android:id="@+id/edit_card_number"
        android:lines="1"
        android:layout_below="@id/edit_email_address"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_below="@id/edit_card_number"
        android:orientation="horizontal"
        android:id="@+id/card_expiry_details">
    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/expiry_month"
        android:id="@+id/edit_expiry_month"
        android:lines="1"
        android:layout_margin="20dp" />
        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/expiry_year"
            android:id="@+id/edit_expiry_year"
            android:lines="1"
            android:layout_margin="20dp"/>
    </LinearLayout>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/security_code"
        android:layout_below="@id/card_expiry_details"
        android:ems="5"
        android:lines="1"
        android:layout_margin="20dp"
        android:id="@+id/edit_cvc"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_below="@id/edit_cvc">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_pay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pay_button"
            android:layout_margin="20dp"
            android:theme="@style/MyMaterialTheme"
            android:background="@android:color/holo_red_light"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:layout_margin="20dp"
            android:theme="@style/MyMaterialTheme"
            android:background="@android:color/holo_red_light"/>
    </LinearLayout>


</RelativeLayout>